# aptos_polybasic_backend_rust

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: main.rs
api/src/v1/: doc_rcj.rs  floor.rs  mod.rs
lib/: Cargo.toml
lib/src/: db.rs
spider/: Cargo.toml
spider/lib/: Cargo.toml
spider/nft_collections_trending/: Cargo.toml
spider/nft_collections_trending/migrations/: 20230111064552_spider_nft_collections_trending.sql
spider/nft_collections_trending/src/: main.rs
