[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.24.1", features = ["full"] }
actix-web = "4"
sqlx = { version = "0.5.11", features = [ "runtime-tokio-rustls", "mysql", "chrono", "decimal" ] }
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet" }
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
chrono = "0.4.23"
rust_decimal = "1.27"
num = { version = "0.4.0", features = ["serde"] }
url = "2.3.1"
regex = "1.7.1"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
dotenv = "0.15.0"
