[package]
name = "nft_collections_trending"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
tokio = { version = "1.24.1", features = ["full"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
dotenv = "0.15.0"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-rustls", "mysql", "chrono", "decimal" ] }
chrono = "0.4.23"
rust_decimal = "1.27"
